--- a/innov/views/login.ejs
+++ b/innov/views/login.ejs
@@ -4,3 +4,4 @@
   <input type="password" name="password">
   <input type="submit" value="submit">
 </form>
+ <a href="/auth/facebook/" class="btn">with Facebook</a>
